@@ -19,8 +19,9 @@
 # script `instspc-test.sh'.
 
 # Ensure proper definition of $testsrcdir.
-. ./defs-static || exit 99
-test -n "$testsrcdir" || exit 99 # sanity check
+# FIXME: we employ useless quoting below to please maintainer-check.
+. ./defs-static || 'exit' 99
+test -n "$testsrcdir" || 'exit' 99 # Sanity check.
 
 instspc_action=generate-data
 . $testsrcdir/instspc-tests.sh
