@@ -1,5 +1,15 @@
 2011-06-02  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	maintcheck: fix some more failures
+	* tests/instdir-ltlib.test: Use creative quoting to avoid
+	spuriously triggering the `sc_rm_minus_f' maintainer check.
+	* tests/instdir-prog.test: Likewise.
+	* tests/instspc-data.test: Use creative quoting to avoid
+	spuriously triggering the `sc_tests_Exit_not_exit' maintainer
+	check.
+
+2011-06-02  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	maintcheck: fix some failures, extend some checks
 	* Makefile.am (sc_diff_automake_in_automake): Update, as we
 	now expect 9 lines, not 8, to be changed from `automake.in'
